--- a/config.json
+++ b/config.json
@@ -3,18 +3,18 @@
     "notiGroup": true,
     "MAINTENANCE": false,
     "allowInbox": false,
-    "BOTNAME": " 💢 ",
-    "AMDIN_NAME": "Lương Trường Khôi",
-    "keyRent": "Lunar",
+    "BOTNAME": "Wolfsamson",
+    "AMDIN_NAME": "Nguyễn Nam",
+    "keyRent": "wolf",
     "FACEBOOK_ADMIN": "",
-    "PREFIX": ".",
+    "PREFIX": "/",
     "box_admin": "",
     "ADMINBOT": [
-        "",
+        "100056587066089",
         ""
     ],
     "NDH": [
-        "",
+        "100056587066089",
         ""
     ],
     "autoCleanCache": {
