--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-Nhớ giữ credit nhé!
+[
+    {
+        "key": "dbln",
+        "value": "%7B%22100010930092559%22%3A%22Qrnup0Kc%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "sb",
+        "value": "6RbgZ-q9qKf9DYndMoH-P25r",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B739x365x1.975000023841858",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.975000023841858",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "datr",
+        "value": "AMYraMOmtdJTGabElcq-4-m2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100010930092559",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "xs",
+        "value": "2%3AtV4sVhdHwsEBdQ%3A2%3A1748849192%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100423653%3BT%3A29157621",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2840%3Btimestamp%3A1749457317",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "fr",
+        "value": "1yjqXby2HdwPbYeoI.AWcdKHG1euydh7TIa2btrP9ch_u3Pb1YbJVOipOGEYyVwelvqqE.BoPU94..AAA.0.0.BoS6sI.AWcXOs_mR9ZbwJde1tfd2HT08Bk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    },
+    {
+        "key": "wd",
+        "value": "980x1984",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-13T06:02:05.322Z",
+        "lastAccessed": "2025-06-13T06:02:05.322Z"
+    }
+]
