--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "BOTNAME": " 💢 ",
     "AMDIN_NAME": "Yang Phúc Sanh",
     "keyRent": "Lunar",
-    "FACEBOOK_ADMIN": "",
+    "FACEBOOK_ADMIN": "https://www.facebook.com/share/16TBN8s1Jj/",
     "PREFIX": "!",
     "box_admin": "",
     "ADMINBOT": [
