--- a/config.json
+++ b/config.json
@@ -4,17 +4,17 @@
     "MAINTENANCE": false,
     "allowInbox": false,
     "BOTNAME": " 💢 ",
-    "AMDIN_NAME": "Lương Trường Khôi",
+    "AMDIN_NAME": "Yabg Phúc Sanh",
     "keyRent": "Lunar",
-    "FACEBOOK_ADMIN": "",
+    "FACEBOOK_ADMIN": "https://www.facebook.com/share/16TBN8s1Jj/",
     "PREFIX": ".",
     "box_admin": "",
     "ADMINBOT": [
-        "",
+        "61572493975125",
         ""
     ],
     "NDH": [
-        "",
+        "61572493975125",
         ""
     ],
     "autoCleanCache": {
